--- a/make.html
+++ b/make.html
@@ -145,7 +145,7 @@
             </div>
         </div>
 
-		<!-- Header -->
+        <!-- Header -->
     <a name="about"></a>
     <div class="intro-header">
         <div class="container">
@@ -158,10 +158,7 @@
                         <hr class="intro-divider">
                         <ul class="list-inline">
                             <li>
-                                <a href="shop.html" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">SHOP</span></a>
-                            </li>
-                            <li>
-                                <a href="make.html" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">MAKE</span></a>
+                                <a href="shop.html" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">UPLOAD YOU MODEL</span></a>
                             </li>
                         </ul>
                     </div>
@@ -174,46 +171,71 @@
     </div>
     <!-- /.intro-header -->
     <br>
-    <div class="col-lg-12">
-        <h2 class="intro-text text-center">Everyone's
-            <strong>A Maker</strong>
-        </h2>
-        <br>
-        <p class="text-center">Whether you're an experienced 3D designer or just want to personalize a unique gift, Aakist gives you the tools to make exactly what you want</p>
-    </div>
-    <br><br><br>
-    
-    <section id="team" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <a href="#"><h4>Hire a Designer</h4></a><br>
-                        <p class="text-muted">Work with our Community to design that something special</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Easy Creators</h4></a><br>
-                        <p class="text-muted">Little yo no skill needed to amke peronalized gifts</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Upload Your Design</h4></a><br>
-                        <p class="text-muted">You've got the skills and 3D file ready to go!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
+    <section id="services" class="services">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h2>Our Services</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Think</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Create</strong>
+                                </h4>   
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Print</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Sell</strong>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row (nested) -->
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+<br>
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
+            <div class="row no-gutter popup-gallery ">
                 <div class="col-lg-6 col-md-8 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
@@ -278,196 +300,21 @@
             </div>
         </div>
     </section>
-
-    <section id="portfolio1" class="bg-light-gray">
+<br><br>
+    <div class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="intro-text text-center">3D Print In Over 50 Materials</h2>
-                    <h3 class="section-subheading text-muted">From plastics to porcelain, silver to sandstone, Shapeways offers a large collection of materials for you to create unique products</h3>
+                <div class="col-lg-6 banner">
+                    <a href="" style="color:white"><h2>Hire A Designer</h2></a>
+                </div>
+                <div class="col-lg-6 banner">
+                    <a href="" style="color:white"><h2>Share Your Story</h2></a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
-                        </a>
-                    </div>
-                    <div class="portfolio-caption1">
-                        <h4>Aluminium</h4>
-                        <p class="text-muted">Our newest and strongest material is perfect for tools, drone parts and interlocking designs.</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
-                        </a>
-                    </div>
-                    <div class="portfolio-caption1">
-                        <h4>Metals</h4>
-                        <p class="text-muted">Create beautiful and unique jewelry in a variety of precious metals like gold, steel, silver, brass, and bronze.</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
-                        </a>
-                    </div>
-                    <div class="portfolio-caption1">
-                        <h4>Plastics</h4>
-                        <p class="text-muted">Miniatures to model trains, our plastics provide an incredibly versatile way to realize your ideas.</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
-                        </a>
-                    </div>
-                    <div class="portfolio-caption1">
-                        <h4>Porcelain</h4>
-                        <p class="text-muted">Personalize your home with our colorful food, dishwasher, and oven safe material.</p>
-                    </div>
-                </div>
-                </div>
-            </div>
-    </section>
-
-    <div class="row">
-        <div class="col-lg-12 text-center">
-            <h2 class="intro-text text-center">Material Sample Kits</h2>
-            <h3 class="section-subheading text-muted">Get your hands on some of our materials.</h3>
         </div>
+        <!-- /.container -->
     </div>
-    <section id="team" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/portfolio/roundicons.png" class="img-responsive img-circle" alt="">
-                        <a href="#"><h4>Color And Finish</h4></a><br>
-                        <p class="text-muted">Great if you're designing gadgets,jewelry or miniatures</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/portfolio/roundicons.png" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Basic Kit</h4></a><br>
-                        <p class="text-muted">The Basic Sample Kit includes our most popular materials</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/portfolio/roundicons.png" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Metals</h4></a><br>
-                        <p class="text-muted">Great for designing jewelry,replacement parts, or tools</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <div class="content-section-a">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt=""><br>
-                        <p class="text-muted">When I started experimenting with 3D design myself, Shapeways was a natural fit. Because I design so much in metal, I love that all aspects of the process- from wax model to final polishing- can be handled in a single place.</p>
-                        <a href="#"><h4><strong>KASIA WISNIEWSKI</strong></h4><br>
-                            <p class="text-muted">Collected Edition</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <aside class="clients">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/wordpress.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/microlancer.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </aside>
-
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!-- /.banner -->
 
     <footer>
         <div class="container">
@@ -496,16 +343,6 @@
             </div>
         </div>
     </footer>
-	<script>
-        $(document).ready(function () {
-        $('.dropdown-toggle').dropdown();
-    	});
-	</script>
-    <script type="text/javascript">
-        $('#myModal').on('shown.bs.modal', function () {
-            $('#myInput').focus()
-        })
-    </script>
-	</body>
-	
+
+    </body>
 </html>
