--- a/item.html
+++ b/item.html
@@ -300,6 +300,64 @@
 
         <br>
 
+        <div class="row">
+            <div class="col-sm-8">
+                <h2>PRODUCT DETAILS</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br><br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h3>Overview</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                <ul>
+                    <li>Lorem Ipsum</li>
+                    <li>Dolor Sit Amet</li>
+                    <li>Consectetur</li>
+                    <li>Adipiscing Elit</li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <h2>More Products from the <strong style="color: black">OwnerName</strong></h2>
+                <div class="row">
+                    <div class="col-sm-6 col-xs-1">
+                        <a href="#">
+                            <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                        </a>
+                    </div>
+
+                    <div class="col-sm-6 col-xs-1">
+                        <a href="#">
+                            <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                        </a>
+                    </div>
+
+                    <div class="col-sm-6 col-xs-1">
+                        <a href="#">
+                            <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                        </a>
+                    </div>
+
+                    <div class="col-sm-6 col-xs-1">
+                        <a href="#">
+                            <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                        </a>
+                    </div>
+
+                </div>
+                <p>
+                    <a class="btn btn-default btn-lg" href="#">More Products &raquo;</a>
+                </p>
+            </div>
+        </div>
+
         <footer>
         <div class="container">
             <div class="row">
