--- a/item.html
+++ b/item.html
@@ -213,38 +213,36 @@
             </div>
 
             <div class="col-md-4">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h3 class="page-header text-center"><small>Material</small></h3>
+                    </div>
 
-            <div class="row">
+                    <div class="col-sm-3 col-xs-3">
+                        <a href="#">
+                            <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                        </a>
+                    </div>
 
-            <div class="col-lg-12">
-                <h3 class="page-header text-center"><small>Material</small></h3>
-            </div>
+                    <div class="col-sm-3 col-xs-3">
+                        <a href="#">
+                            <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                        </a>
+                    </div>
 
-            <div class="col-sm-3 col-xs-3">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
-                </a>
-            </div>
+                    <div class="col-sm-3 col-xs-3">
+                        <a href="#">
+                            <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                        </a>
+                    </div>
 
-            <div class="col-sm-3 col-xs-3">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
-                </a>
-            </div>
+                    <div class="col-sm-3 col-xs-3">
+                        <a href="#">
+                            <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                        </a>
+                    </div>
 
-            <div class="col-sm-3 col-xs-3">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
-                </a>
-            </div>
-
-            <div class="col-sm-3 col-xs-3">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
-                </a>
-            </div>
-
-        </div>
+                </div>
                 <h3>Overview</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                 <ul>
@@ -253,48 +251,91 @@
                     <li>Consectetur</li>
                     <li>Adipiscing Elit</li>
                 </ul>
-<br>
-<br>
-<br>
+                <br>
                 <h2>$xx.xx</h2>
                 <button class="btn center-block btn-primary btn-block">
-                                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Buy Now
-                            </button>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Buy Now
+                </button>
+
             </div>
         </div>
         <!-- /.row -->
 
         <!-- Related Projects Row -->
         <div class="row">
-
+        <div class="col-lg-6">
             <div class="col-lg-12">
                 <h3 class="page-header">Related Projects</h3>
             </div>
 
-            <div class="col-sm-1 col-xs-1">
+            <div class="col-sm-2 col-xs-1">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
                 </a>
             </div>
 
-            <div class="col-sm-1 col-xs-1">
+            <div class="col-sm-2 col-xs-1">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
                 </a>
             </div>
 
-            <div class="col-sm-1 col-xs-1">
+            <div class="col-sm-2 col-xs-1">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
                 </a>
             </div>
 
-            <div class="col-sm-1 col-xs-1">
+            <div class="col-sm-2 col-xs-1">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
                 </a>
             </div>
 
+            <div class="col-sm-2 col-xs-1">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-2 col-xs-1">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="img/port.jpg" alt="">
+                </a>
+            </div>
+        </div>
+
+        <br><br>
+        <div class="col-lg-6">
+            <div class="col-lg-12">
+                <div class="col-lg-6">
+                    <button class="btn center-block btn-primary btn-block" style="background-color:white; border: 1px solid black;">
+                        <i class="fa fa-heart" aria-hidden="true" style="color:black;"> Favourite</i>
+                    </button>
+                </div>
+                <div class="col-lg-6">
+                    <button class="btn center-block btn-primary btn-block" style="background-color:white; border: 1px solid black;">
+                        <i class="fa fa-shopping-cart" aria-hidden="true" style="color:black;"> Add to Cart</i>
+                    </button>
+                </div>
+            </div><br><br><br>
+
+             <div class="col-md-8">
+                    <ul class="list-inline social-buttons">
+                        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                        <li><a href="#"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-google-plus-square fa-3x"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-pinterest-square fa-3x"></i></a>
+                        </li>
+                    </ul>
+                </div>
+        </div>
         </div>
         <!-- /.row -->
 
@@ -325,7 +366,7 @@
                 </ul>
             </div>
             <div class="col-sm-4">
-                <h2>More Products from the <strong style="color: black">OwnerName</strong></h2>
+                <h2>More Products from the <small style="color: black">OwnerName</small></h2>
                 <div class="row">
                     <div class="col-sm-6 col-xs-1">
                         <a href="#">
