--- a/shop.html
+++ b/shop.html
@@ -332,16 +332,17 @@
 
 <br><br>
     <div class="intro-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
-                </div>
-                <div class="col-lg-6">
-                    <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
-                </div>
+            <div class="col-lg-6 img">
+                <br><br><br><br>
+                <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
+                <br><br><br><br>
             </div>
-        </div>
+            <div class="col-lg-6 img">
+                <br><br><br><br>
+                <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
+                <br><br><br><br>
+            </div>
+            <div class="clearfix"></div>
         <!-- /.container -->
     </div>
     <!-- /.banner -->
